functions/firebase-debug.log
[debug] [2025-10-05T23:49:15.895Z] ----------------------------------------------------------------------
[debug] [2025-10-05T23:49:15.902Z] Command:       C:\Program Files\nodejs\node.exe C:\Users\HP\AppData\Local\Yarn\Data\global\node_modules\firebase-tools\lib\bin\firebase.js emulators:start --only functions
[debug] [2025-10-05T23:49:15.903Z] CLI Version:   13.29.1
[debug] [2025-10-05T23:49:15.904Z] Platform:      win32
[debug] [2025-10-05T23:49:15.904Z] Node Version:  v20.18.0
[debug] [2025-10-05T23:49:15.904Z] Time:          Mon Oct 06 2025 02:49:15 GMT+0300 (Arabian Standard Time)
[debug] [2025-10-05T23:49:15.904Z] ----------------------------------------------------------------------
[debug] 
[debug] [2025-10-05T23:49:16.184Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2025-10-05T23:49:16.185Z] > authorizing via signed-in user (antonytitan96@gmail.com)
[info] i  emulators: Starting emulators: functions {"metadata":{"emulator":{"name":"hub"},"message":"Starting emulators: functions"}}
[debug] [2025-10-05T23:49:16.203Z] [logging] Logging Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2025-10-05T23:49:16.204Z] assigned listening specs for emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}]},"metadata":{"message":"assigned listening specs for emulators"}}
[debug] [2025-10-05T23:49:16.214Z] [hub] writing locator at C:\Users\HP\AppData\Local\Temp\hub-profileedgelatest.json
[debug] [2025-10-05T23:49:16.251Z] [functions] Functions Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2025-10-05T23:49:16.251Z] [eventarc] Eventarc Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2025-10-05T23:49:16.252Z] [tasks] Cloud Tasks Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2025-10-05T23:49:16.252Z] late-assigned ports for functions and eventarc emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}],"functions":[{"address":"127.0.0.1","family":"IPv4","port":5001}],"eventarc":[{"address":"127.0.0.1","family":"IPv4","port":9299}],"tasks":[{"address":"127.0.0.1","family":"IPv4","port":9499}]},"metadata":{"message":"late-assigned ports for functions and eventarc emulators"}}
[warn] !  functions: The following emulators are not running, calls to these services from the Functions emulator will affect production: apphosting, auth, firestore, database, hosting, pubsub, storage, dataconnect {"metadata":{"emulator":{"name":"functions"},"message":"The following emulators are not running, calls to these services from the Functions emulator will affect production: \u001b[1mapphosting, auth, firestore, database, hosting, pubsub, storage, dataconnect\u001b[22m"}}
[debug] [2025-10-05T23:49:16.258Z] defaultcredentials: writing to file C:\Users\HP\AppData\Roaming\firebase\antonytitan96_gmail_com_application_default_credentials.json
[debug] [2025-10-05T23:49:16.263Z] Setting GAC to C:\Users\HP\AppData\Roaming\firebase\antonytitan96_gmail_com_application_default_credentials.json {"metadata":{"emulator":{"name":"functions"},"message":"Setting GAC to C:\\Users\\HP\\AppData\\Roaming\\firebase\\antonytitan96_gmail_com_application_default_credentials.json"}}
[debug] [2025-10-05T23:49:16.265Z] Checked if tokens are valid: true, expires at: 1759710991580
[debug] [2025-10-05T23:49:16.266Z] Checked if tokens are valid: true, expires at: 1759710991580
[debug] [2025-10-05T23:49:16.267Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/profileedgelatest/adminSdkConfig [none]
[debug] [2025-10-05T23:49:16.811Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/profileedgelatest/adminSdkConfig 200
[debug] [2025-10-05T23:49:16.812Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/profileedgelatest/adminSdkConfig {"projectId":"profileedgelatest","storageBucket":"profileedgelatest.firebasestorage.app"}
[info] i  functions: Watching "C:\Users\HP\projects\javascript\profile-edge\functions" for Cloud Functions... {"metadata":{"emulator":{"name":"functions"},"message":"Watching \"C:\\Users\\HP\\projects\\javascript\\profile-edge\\functions\" for Cloud Functions..."}}
[debug] [2025-10-05T23:49:16.957Z] Validating nodejs source
[debug] [2025-10-05T23:49:19.803Z] > [functions] package.json contents: {
  "name": "functions",
  "description": "Cloud Functions for Firebase",
  "scripts": {
    "serve": "firebase emulators:start --only functions",
    "shell": "firebase functions:shell",
    "start": "npm run shell",
    "deploy": "firebase deploy --only functions",
    "logs": "firebase functions:log"
  },
  "engines": {
    "node": "22"
  },
  "main": "index.js",
  "dependencies": {
    "firebase-admin": "^12.6.0",
    "firebase-functions": "^6.0.1"
  },
  "devDependencies": {
    "firebase-functions-test": "^3.1.0"
  },
  "private": true
}
[debug] [2025-10-05T23:49:19.804Z] Building nodejs source
[debug] [2025-10-05T23:49:19.805Z] Failed to find version of module node: reached end of search path C:\Users\HP\projects\javascript\profile-edge\functions\node_modules
[warn] !  functions: Your requested "node" version "22" doesn't match your global version "20". Using node@20 from host. 
[info] i  functions: Loaded environment variables from .env. 
[debug] [2025-10-05T23:49:19.814Z] Could not find functions.yaml. Must use http discovery
[debug] [2025-10-05T23:49:19.837Z] Found firebase-functions binary at 'C:\Users\HP\projects\javascript\profile-edge\functions\node_modules\.bin\firebase-functions'
[info] Serving at port 8861

[error] C:\Users\HP\projects\javascript\profile-edge\functions\index.js:1
import functions from "firebase-functions";
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at loadModule (C:\Users\HP\projects\javascript\profile-edge\functions\node_modules\firebase-functions\lib\runtime\loader.js:40:16)
    at loadStack (C:\Users\HP\projects\javascript\profile-edge\functions\node_modules\firebase-functions\lib\runtime\loader.js:157:23)
    at C:\Users\HP\projects\javascript\profile-edge\functions\node_modules\firebase-functions\lib\bin\firebase-functions.js:102:60

[debug] [2025-10-05T23:49:20.620Z] Got response code 400; body Failed to generate manifest from function source: Cannot use import statement outside a module
[error] !!  functions: Failed to load function definition from source: FirebaseError: Functions codebase could not be analyzed successfully. It may have a syntax or runtime error {"metadata":{"emulator":{"name":"functions"},"message":"Failed to load function definition from source: FirebaseError: Functions codebase could not be analyzed successfully. It may have a syntax or runtime error"}}
[debug] [2025-10-05T23:49:24.709Z] Could not find VSCode notification endpoint: FetchError: request to http://localhost:40001/vscode/notify failed, reason: . If you are not running the Firebase Data Connect VSCode extension, this is expected and not an issue.
[info] 
┌─────────────────────────────────────────────────────────────┐
│ ✔  All emulators ready! It is now safe to connect your app. │
│ i  View Emulator UI at http://127.0.0.1:4000/               │
└─────────────────────────────────────────────────────────────┘

┌───────────┬────────────────┬─────────────────────────────────┐
│ Emulator  │ Host:Port      │ View in Emulator UI             │
├───────────┼────────────────┼─────────────────────────────────┤
│ Functions │ 127.0.0.1:5001 │ http://127.0.0.1:4000/functions │
└───────────┴────────────────┴─────────────────────────────────┘
  Emulator Hub running at 127.0.0.1:4400
  Other reserved ports: 4500

Issues? Report them at https://github.com/firebase/firebase-tools/issues and attach the *-debug.log files.
 
[debug] [2025-10-05T23:52:31.092Z] File C:\Users\HP\projects\javascript\profile-edge\functions\index.js changed, reloading triggers {"metadata":{"emulator":{"name":"functions"},"message":"File C:\\Users\\HP\\projects\\javascript\\profile-edge\\functions\\index.js changed, reloading triggers"}}
